--- a/scss/layout/_intro.scss
+++ b/scss/layout/_intro.scss
@@ -90,7 +90,7 @@
         }
 
         @include for-iphone-landscape {
-            @include grid-child(3, 6, 1, 4);
+            @include grid-child(3, 8, 1, 4);
         }
 
         &>h2 {
@@ -126,6 +126,7 @@
                 font-size: 0.75rem;
                 gap: 0.375px;
                 line-height: 1rem;
+                padding: 0.375px;
             }
         }
     }
@@ -151,7 +152,7 @@
         }
 
         @include for-iphone-landscape {
-            @include grid-child(6, 10, 1, 4);
+            @include grid-child(8, 11, 1, 4);
         }
 
     }
@@ -177,7 +178,7 @@
         }
 
         @include for-iphone-landscape {
-            @include grid-child(10, 13, 4, 6);
+            @include grid-child(11, 13, 1, 4);
         }
     }
 
@@ -202,7 +203,7 @@
         }
 
         @include for-iphone-landscape {
-            @include grid-child(10, 13, 1, 4);
+            @include grid-child(7, 10, 4, 7);
         }
     }
 
@@ -300,7 +301,7 @@
         }
 
         @include for-iphone-landscape {
-            @include grid-child(7, 10, 4, 7);
+            @include grid-child(10, 13, 4, 6);
         }
 
         .des {
